@@ -27,6 +27,7 @@ Alt="Baby Linux Logo" Height=76 Width=64></TD>
 <A HRef="download/">Download</A> |
 <A HRef="faq/">FAQ</A> |
 <A HRef="history/">History</A> |
+<A HRef="lists/">Mailing Lists</A> |
 <A HRef="news/">News</A> |
 <A HRef="releases.html">Releases</A> |
 Home |
@@ -78,7 +79,7 @@ root disk images to ease first steps with ELKS.</P>
 <HR Width=90%>
 
 <P Align=Center>This document is released under the terms of the
-<A HRef="http://www.fsf.org/licences/gpl.html">GNU General Public
+<A HRef="http://www.fsf.org/licenses/gpl.html">GNU General Public
 Licence</A>, version 2 only.</P>
 
 </Body>
