@@ -1,0 +1,71 @@
+<HTML>
+<Head>
+
+<Title>ELKS Mailing Lists: Index</Title>
+
+<Meta Name="description" description="Details of the ELKS mailing lists">
+<Meta Name="keywords" keywords="Linux,linux-86,linux-8086,16bit,UNIX,ELKS,mailing list">
+</Head>
+<Body BGColor=White Text=Black Link=Blue VLink=Magenta ALink=Red>
+
+<Table Border=0 Width=100%>
+
+<TR>
+<TD Width=20% Align=Left VAlign=Top><Img Src="../Images/ELKStag.gif"
+Alt="ELKS Logo" Height=77 Width=224></TD>
+<TD Width=70% Align=Center VAlign=Center><Font Size=+3>ELKS Mailing
+Lists</Font></TD>
+<TD Width=10% Align=Right VAlign=Top><Img Src="../Images/ELKSlogo.gif"
+Alt="Baby Linux Logo" Height=76 Width=64></TD>
+</TR>
+
+</Table>
+
+<P Align=Center>|
+<A HRef="../CHANGELOG.txt">Website History</A> |
+<A HRef="../download/">Download</A> |
+<A HRef="../faq/">FAQ</A> |
+<A HRef="../history/">History</A> |
+Mailing Lists |
+<A HRef="../news/">News</A> |
+<A HRef="../releases.html">Releases</A> |
+<A HRef="../">Home</A> |
+</P>
+
+<HR Width=90%>
+
+<P Align=Justify>This is an index to mailing lists related to the ELKS
+kernel, and to porting software to the ELKS kernel. The following lists
+are currently known to exist:</P>
+
+<OL>
+
+<LI><P Align=Justify>ELKS Kernel development mailing lists:</P>
+
+<OL>
+
+<LI><P Align=Justify>The <A HRef="linux-8086.html">Linux 8086</A> mailing
+list deals with all issues directly related to the development of the ELKS
+kernel.</P>
+
+</OL>
+
+<LI><P Align=Justify>Porting software to ELKS</P>
+
+<P Align=Justify>There are no known lists related to this topic at this
+time.</P>
+
+</OL>
+
+<P Align=Justify>If you are aware of any other mailing lists related to
+ELKS, please advise the <A HRef="MailTo:rhw@MemAlpha.cx">maintainer</A>
+of this site.</P>
+
+<HR Width=90%>
+
+<P Align=Center>This document is released under the terms of the
+<A HRef="http://www.fsf.org/licenses/gpl.html">GNU General Public
+Licence</A>, version 2 only.</P>
+
+</Body>
+</HTML>
