@@ -1,0 +1,57 @@
+<HTML>
+<Head>
+
+<Title>ELKS Mailing Lists: Linux-8086@vger.kernel.org</Title>
+
+<Meta Name="description" description="Details of the ELKS mailing lists">
+<Meta Name="keywords" keywords="Linux,linux-86,linux-8086,16bit,UNIX,ELKS,mailing list">
+</Head>
+<Body BGColor=White Text=Black Link=Blue VLink=Magenta ALink=Red>
+
+<Table Border=0 Width=100%>
+
+<TR>
+<TD Width=20% Align=Left VAlign=Top><Img Src="../Images/ELKStag.gif"
+Alt="ELKS Logo" Height=77 Width=224></TD>
+<TD Width=70% Align=Center VAlign=Center><Font Size=+3>ELKS Mailing
+List:<BR>Linux-8086@vger.kernel.org</Font></TD>
+<TD Width=10% Align=Right VAlign=Top><Img Src="../Images/ELKSlogo.gif"
+Alt="Baby Linux Logo" Height=76 Width=64></TD>
+</TR>
+
+</Table>
+
+<P Align=Center>|
+<A HRef="../CHANGELOG.txt">Website History</A> |
+<A HRef="../download/">Download</A> |
+<A HRef="../faq/">FAQ</A> |
+<A HRef="../history/">History</A> |
+Mailing Lists |
+<A HRef="../news/">News</A> |
+<A HRef="../releases.html">Releases</A> |
+<A HRef="../">Home</A> |
+</P>
+
+<HR Width=90%>
+
+<P Align=Justify>The <B>Linux-8086</B> list at <B>vger.kernel.org</B> is
+the official ELKS mailing list, on which all topics concerning ELKS are
+discussed.</P>
+
+<P Align=Justify>To subscribe to the ELKS mailing list, send an email to
+<A HRef="MailTo:majordomo@vger.kernel.org">majordomo@vger.kernel.org</A>
+containing the words <B>subscribe linux-8086</B> in the body of the email.
+If you want to unsubscribe from the ELKS mailing list, send an email to
+<A HRef="MailTo:majordomo@vger.kernel.org">majordomo@vger.kernel.org</A>
+containing the words <B>unsubscribe linux-8086
+&lt;<I>your_email_address</I>&gt;</B> in the body of the email. In both
+cases, the subject line is ignored.</P>
+
+<HR Width=90%>
+
+<P Align=Center>This document is released under the terms of the
+<A HRef="http://www.fsf.org/licenses/gpl.html">GNU General Public
+Licence</A>, version 2 only.</P>
+
+</Body>
+</HTML>
