@@ -27,6 +27,7 @@ Alt="Baby Linux Logo" Height=76 Width=64></TD>
 <A HRef="download.html">Download</A> |
 <A HRef="faq/">FAQ</A> |
 <A HRef="history/">History</A> |
+<A HRef="lists/">Mailing Lists</A> |
 <A HRef="news/">News</A> |
 Releases |
 <A HRef="index.html">Home</A> |
